--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -18,15 +18,15 @@ en:
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "투약 이메일 인증"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "투약 비밀번호 초기화"
       unlock_instructions:
         subject: "Unlock instructions"
       email_changed:
         subject: "Email Changed"
       password_change:
-        subject: "Password Changed"
+        subject: "비밀번호 변경"
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
       success: "Successfully authenticated from %{kind} account."
